Updated webpack version for smaller prod bundles Updated logo

--- a/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/metadata-modal.component.html
@@ -17,7 +17,7 @@
     <div #uploader></div>
     <div>
       <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Cancel</button>
-      <button type="button" [ngClass]="{disabled : disabled}" class="btn btn-primary" (click)="handleSubmit($event)">
+      <button type="button" [ngClass]="{disabled : disabled}" class="btn btn-primary" (click)="handleSubmit()">
         <i class="icon-upload icon-white"></i> Upload
       </button>
     </div>
