--- a/uasdm-web/src/main/ng2/src/app/management/modals/confirm-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/confirm-modal.component.html
@@ -6,13 +6,13 @@
     {{message}}
   </div>
     
-  <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+ <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
     <div class="ui-dialog-buttonset">
-      <button type="button" (click)="confirm()" class="btn btn-primary btn ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="padding: 4px 18px;">
-        <span class="ui-button-text">Ok</span>
+      <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
+        <span class="ui-button-text">{{cancelText}}</span>
       </button>
-      <button type="button" (click)="bsModalRef.hide()" class="btn btn ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="padding: 4px 18px;">
-        <span class="ui-button-text">Cancel</span>
+      <button type="button" (click)="confirm()" [ngClass]="type === 'DANGER' ? 'btn-danger' : 'btn-primary'" class="btn" role="button" aria-disabled="false" style="padding: 4px 18px;">
+        <span class="ui-button-text">{{submitText}}</span>
       </button>
     </div>
   </div>
