--- a/uasdm-web/src/main/webapp/net/geoprism/css/main.css
+++ b/uasdm-web/src/main/webapp/net/geoprism/css/main.css
@@ -1938,7 +1938,7 @@ option[selected]{ font-weight:bold}
 } */
 
 #location-explorer-list {
-    padding: 20px;
+    /* padding: 20px; */
     height: calc(100% - 144px);
     overflow-y: auto;
     overflow-x: hidden;
@@ -1950,12 +1950,14 @@ option[selected]{ font-weight:bold}
 }
 
 .location-management-widget-section {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .location-management-list-container {
 /*   margin-top: 20px; */
   border-top: solid 1px #ddd;
   padding-top: 5px;
+  margin: 0;
 }
 
 ul.location-management-list {
