Thumbnail front-end progress

--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -87,7 +87,7 @@
                         <div class="media-left">
                             <a [routerLink]="" (click)="previewImage($event, image)">
                                 <img class="image-thumbnail"
-                                    [src]="imageToShow | safeHtml"
+                                    [src]="thumbnails[image.key] | safeHtml"
                                     alt="Image">
                             </a>
                         </div>
