--- a/uasdm-web/src/main/ng2/src/app/management/modals/confirm-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/confirm-modal.component.html
@@ -1,8 +1,8 @@
 <div class="confirm-modal ui-dialog ui-widget ui-widget-content ui-corner-all ui-front ui-draggable ui-resizable com-runwaysdk-ui-factory-jquery-Dialog com-runwaysdk-ui-factory-runway-Widget ui-dialog-buttons" tabindex="-1" role="dialog">
-  <div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
+  <!-- <div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
     <span id="ui-id-1" class="ui-dialog-title">Warning</span>
-  </div>
-  <div class="confirm-text ui-dialog-content ui-widget-content">
+  </div> -->
+  <div class="confirm-text ui-dialog-content ui-widget-content" style="margin-top:30px;margin-bottom:30px;">
     {{message}}
   </div>
     
