--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -1,54 +1,72 @@
 <uasdm-header [title]="'Data Upload'"></uasdm-header>
 
 <div id="app-container" class="container">
-  <div *ngIf="sites.length > 0" class="row">
-    <form #ngForm="ngForm">
-      <div class="col" *ngIf="existingTask && !currentTask">
-        <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
-          <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
-          <div class="panel-body">
-            <h4>A partial upload was detected. You can either cancel that partial upload or attempt to continue.</h4>
-            <h4>
-              <b>To continue an upload</b>
-              please click the Continue Upload button and re-upload your file and we will try our best to continue where you left off.
-            </h4>
+    <div *ngIf="sites.length === 0" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h4 style="margin-top: 50px;">There are no Sites added to the system. Add a Site, Project, Mission, and Collection using the <a routerlink="/viewer" routerlinkactive="active" href="#/viewer">Site Viewer</a> before uploading data to.</h4>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+    <div *ngIf="sites.length > 0" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <form #ngForm="ngForm">
 
-            <hr>
-            <button type="button" class="btn btn-danger" style="margin-top: 20px;" (click)="removeUpload($event)">
-              <i class="icon-upload icon-white"></i>
-              Cancel Upload
-            </button>
-            <button type="button" class="btn btn-primary" style="margin-top: 20px;" (click)="showUploadPanel()">
-              <i class="icon-upload icon-white"></i>
-              Continue Upload
-            </button>
-          </div>
-        </div>
-      </div>
+                <!-- Existing task panel -->
+                <div class="" *ngIf="existingTask && !currentTask">
+                    <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
+                        <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
+                        <div class="panel-body">
+                            <h4>A partial upload was detected. You can either cancel that partial upload or attempt to
+                                continue.</h4>
+                            <h4>
+                                <b>To continue an upload</b>
+                                please click the Continue Upload button and re-upload your file and we will try our best
+                                to continue where you left off.
+                            </h4>
 
-      <div class="col" *ngIf="!disabled && !existingTask">
-        <div class="form-group">
-          <label for="site">Site:</label>
-          <select name="site" (change)="onSiteSelect($event.target.value)" [(ngModel)]="values.site" required>
-            <option></option>
-            <option *ngFor="let site of sites" [value]="site.id">{{site.name}}</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="project">Project:</label>
-          <select name="project" [attr.disabled]="values.site == null ? '' : null" (change)="onProjectSelect($event.target.value)" [(ngModel)]="values.project" required>
-            <option></option>
-            <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="mission">Mission:</label>
-          <select name="mission" [attr.disabled]="values.project == null ? '' : null" (change)="onMissionSelect($event.target.value)" [(ngModel)]="values.mission" required>
-            <option></option>
-            <option *ngFor="let mission of missions" [value]="mission.id">{{mission.name}}</option>
-          </select>
-        </div>
-<!-- 
+                            <hr>
+                            <button type="button" class="btn btn-danger" style="margin-top: 20px;"
+                                (click)="removeUpload($event)">
+                                <i class="icon-upload icon-white"></i>
+                                Cancel Upload
+                            </button>
+                            <button type="button" class="btn btn-primary" style="margin-top: 20px;"
+                                (click)="showUploadPanel()">
+                                <i class="icon-upload icon-white"></i>
+                                Continue Upload
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="margin-top: 30px;" class="" *ngIf="!disabled && !existingTask">
+                    <div class="form-group">
+                        <label for="site">Site:</label>
+                        <select name="site" (change)="onSiteSelect($event.target.value)" [(ngModel)]="values.site"
+                            required>
+                            <option></option>
+                            <option *ngFor="let site of sites" [value]="site.id">{{site.name}}</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="project">Project:</label>
+                        <select name="project" [attr.disabled]="values.site == null ? '' : null"
+                            (change)="onProjectSelect($event.target.value)" [(ngModel)]="values.project" required>
+                            <option></option>
+                            <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="mission">Mission:</label>
+                        <select name="mission" [attr.disabled]="values.project == null ? '' : null"
+                            (change)="onMissionSelect($event.target.value)" [(ngModel)]="values.mission" required>
+                            <option></option>
+                            <option *ngFor="let mission of missions" [value]="mission.id">{{mission.name}}</option>
+                        </select>
+                    </div>
+                    <!-- 
         <div class="form-check">
           <label class="form-check-label">
             <input type="radio" class="form-check-input" name="radioopt" [(ngModel)]="values.create" [value]="true" (change)="handleChange()" [checked]="values.create==true" />
@@ -68,44 +86,58 @@
             Invalid name. No spaces or special characters such as <, >, -, +, =, !, @, #, $, %, ^, &, *, ?,/, \ or apostrophes are allowed.        
           </div>
         </div>
- -->        
-        <div class="form-group">
-          <label for="collection">Collection:</label>
-          <select name="collection" [attr.disabled]="values.mission == null ? '' : null" (change)="onCollectionSelect($event.target.value)" [(ngModel)]="values.collection" required>
-            <option></option>
-            <option *ngFor="let collection of collections" [value]="collection.id">{{collection.name}}</option>
-          </select>
+ -->
+                    <div class="form-group">
+                        <label for="collection">Collection:</label>
+                        <select name="collection" [attr.disabled]="values.mission == null ? '' : null"
+                            (change)="onCollectionSelect($event.target.value)" [(ngModel)]="values.collection" required>
+                            <option></option>
+                            <option *ngFor="let collection of collections" [value]="collection.id">{{collection.name}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="" [hidden]="!uploadVisible">
+
+                    <div *ngIf="currentTask" class="panel panel-success" style="margin: 30px 0 30px 0;">
+                        <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
+                        <div class="panel-body">
+                            <h4>
+                                Status:
+                                <b> {{currentTask.status}} </b>
+                            </h4>
+                            <h4>
+                                Message:
+                                <b> {{currentTask.message}} </b>
+                            </h4>
+                            <h4>
+                                Upload Started On:
+                                <b> {{currentTask.createDate}} </b>
+                            </h4>
+                            <h4>
+                                Last Updated:
+                                <b> {{currentTask.lastUpdatedDate}} </b>
+                            </h4>
+                            <h4>
+                                Elapsed Time:
+                                <b> {{uploadCounter}} </b>
+                            </h4>
+                        </div>
+                    </div>
+
+                    <div *ngIf="showFileSelectPanel" class="uploader-container" style="margin-top: 20px;" #uploader></div>
+
+                    <button type="button btn btn-primary" [disabled]="!ngForm.valid || disabled" class="btn btn-primary"
+                        style="margin-top: 20px;" (click)="handleUpload($event)">
+                        <i class="icon-upload icon-white"></i>
+                        Upload
+                    </button>
+
+                </div>
+            </form>
+
         </div>
-      </div>
-
-      <div class="col" [hidden]="!uploadVisible">
-
-        <div *ngIf="currentTask" class="panel panel-success" style="margin: 30px 0 30px 0;">
-          <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
-          <div class="panel-body">
-            <h4>
-              Message:
-              <b> {{currentTask.message}} </b>
-            </h4>
-            <h4>
-              Upload Started On:
-              <b> {{currentTask.createDate}} </b>
-            </h4>
-            <h4>
-              Last Updated:
-              <b> {{currentTask.lastUpdatedDate}} </b>
-            </h4>
-          </div>
-        </div>
-
-        <div #uploader></div>
-        <button type="button btn btn-primary" [disabled]="!ngForm.valid || disabled" class="btn btn-primary" style="margin-top: 20px;" (click)="handleUpload($event)">
-          <i class="icon-upload icon-white"></i>
-          Upload
-        </button>
-
-      </div>
-    </form>
-
-  </div>
+        <div class="col-md-2"></div>
+    </div>
 </div>
