--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -1,6 +1,6 @@
 <uasdm-header [title]="'Tasks'"></uasdm-header>
 
-<div id="app-container" class="container">
+<div id="app-container" class="container" style="padding-top:20px;">
     <div class="row">
       <div class="col-sm-10"><h1>{{userName}}</h1></div>
 <!--       <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image" class="img-circle img-responsive" src="http://www.gravatar.com/avatar/28fd20ccec6865e2d5f0e1f4446eb7bf?s=100"></a></div> -->
