front end notifications

--- a/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="modal-title-container">
-      <h3>Add a {{entity.type}} to thi</h3>
+      <h3>Add a {{entity.type}}</h3>
   </div>
 
   <form #ngForm="ngForm">
