--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -117,9 +117,9 @@ tree-node-expander{
   font-size: 18px;
 }
 
-.panel-heading:hover {
-  background-color: #e0e0e0;
-}
+// .panel-heading:hover {
+//   background-color: #e0e0e0;
+// }
 
 
 .breadcrumb {
@@ -237,6 +237,6 @@ button.create-site-btn {
     margin-bottom: 0;
 }
 
-.panel-heading:hover {
-    background-color: #e0e0e0;
-}
+// .panel-heading:hover {
+//     background-color: #e0e0e0;
+// }
